# seo-app

./: .env  .env.example  README.md  README_ENHANCED.md  pyproject.toml
content_brief_system/: README.md  config.py  main.py  requirements.txt
content_brief_system/brand_guidelines/: ing_tone_of_voice.txt
content_brief_system/output/: brief_Zakelijke_rekening_openen.md
content_brief_system/prompts/: brief_generator.txt  page_analyzer.txt  serp_analyzer.txt
content_brief_system/utils/: prompt_loader.py
output/: ai_overview.md  query_fanout.md  query_fanout_summary.md  report.md
src/ai_content_optimization_agent/: base_agent.py  briefing_formatter.py  crew.py  debug_page.html  main.py  requirements.txt  state.py  test_bright_data.py  utils.py  workflow.py
src/ai_content_optimization_agent/agents/: __init__.py  ai_overview_retriever.py  briefing_generator.py  browser_scraper.py  client_content_analyzer_agent.py  competitive_scraper_agent.py  competitive_summary_agent.py  content_additions_agent.py  content_topics_extractor_agent.py  intent_categorization_agent.py  optimizer.py  paa_retriever.py  query_extractor.py  query_researcher.py  semrush_keyword_agent.py  summarizer.py  title_scraper.py
src/ai_content_optimization_agent/output/: ING_Content_Briefing_20250929_152542.docx  ING_Content_Briefing_20250929_153138.docx  ING_Content_Briefing_20250929_154040.docx  ING_Content_Briefing_20250929_170212.docx  ING_Content_Briefing_20250929_170844.docx  ING_Content_Briefing_20250929_173829.docx  ai_overview.md  briefing_data.json  comprehensive_optimization_report.md  (+6 more)
(+15 files in other folders)
