[project]
name = "ai_content_optimization_agent"
version = "0.1.0"
description = "AI Content Optimization using CrewAI"
requires-python = ">=3.10,<3.14"
dependencies = [
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "python-docx>=1.2.0",
]

[project.scripts]
ai_content_optimization_agent = "ai_content_optimization_agent.main:run"
run_agent = "ai_content_optimization_agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

